--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "date-fns": "^2.30.0",
     "eslint": "8.40.0",
     "eslint-config-next": "13.4.2",
+    "jquery": "^3.7.0",
     "next": "13.4.2",
     "react": "18.2.0",
     "react-dom": "18.2.0"
