--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "jquery": "^3.7.0",
     "next": "13.4.2",
     "react": "18.2.0",
-    "react-dom": "18.2.0"
+    "react-dom": "18.2.0",
+    "react-minimal-pie-chart": "^8.4.0"
   }
 }
